crates/backyard-parser/tests/snapshots/singles__break_with_argument.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: break
    statement:
      node_type: number
      value:
        - 50
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 6
          offset: 6
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 6
        offset: 6
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 7
    offset: 7
leadings: ~
trailings: ~
