crates/backyard-parser/tests/snapshots/singles__continue_with_argument.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: continue
    statement:
      node_type: number
      value: "2"
      loc:
        start:
          line: 1
          column: 9
          offset: 9
        end:
          line: 1
          column: 9
          offset: 9
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 9
        offset: 9
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 10
    offset: 10
leadings: ~
trailings: ~
