crates/backyard-parser/tests/snapshots/singles__goto.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: goto
    label:
      node_type: identifier
      name:
        - 108
        - 97
        - 98
        - 101
        - 108
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 10
          offset: 10
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 5
        offset: 5
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 10
    offset: 10
leadings: ~
trailings: ~
