crates/backyard-parser/tests/snapshots/singles__new.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: new
    statement:
      node_type: call
      name:
        node_type: identifier
        name:
          - 69
          - 120
          - 99
          - 101
          - 112
          - 116
          - 105
          - 111
          - 110
        loc:
          start:
            line: 1
            column: 4
            offset: 4
          end:
            line: 1
            column: 13
            offset: 13
        leadings: ~
        trailings: ~
      arguments: []
      loc:
        start:
          line: 1
          column: 13
          offset: 13
        end:
          line: 1
          column: 14
          offset: 14
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 14
        offset: 14
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 15
    offset: 15
leadings: ~
trailings: ~
