crates/backyard-parser/tests/snapshots/singles__parent.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: static_lookup
    left:
      node_type: parent
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: ~
      trailings: ~
    right:
      node_type: identifier
      name:
        - 97
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 1
          column: 9
          offset: 9
      leadings: ~
      trailings: ~
    use_bracket: false
    loc:
      start:
        line: 1
        column: 6
        offset: 6
      end:
        line: 1
        column: 8
        offset: 8
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 8
    offset: 8
leadings: ~
trailings: ~
